--- a/TwoMove/requirements.txt
+++ b/TwoMove/requirements.txt
@@ -1,2 +1,21 @@
-pytest 8.3.4
+# Framework principal
+Django
+
+# API REST
+djangorestframework
+django-cors-headers
+
+# Testing
+pytest
 pytest-django
+
+# Linter / Formato de código
+flake8
+black
+
+# Base de datos (opcional, por si migramos a Postgres en producción)
+psycopg2-binary
+
+# Seguridad y configuración
+python-decouple
+djangorestframework-simplejwt
