--- a/TwoMove/.github/workflows/two-move-ci.yml
+++ b/TwoMove/.github/workflows/two-move-ci.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "pruebas", "main" ]
   pull_request:
-    branches: [ "pruebas" ]
+    branches: [ "pruebas", "main" ]
 
 jobs:
   build-and-test:
@@ -21,13 +21,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt   # requirements en la raíz
+          pip install -r requirements.txt
 
       - name: Run migrations
         run: python manage.py migrate --noinput
 
       - name: Run tests
-        run: pytest TwoMove/tests.py       # test dummy en TwoMove/tests.py
+        run: pytest TwoMove/tests.py
 
       - name: Run lint
         run: |
