--- a/TwoMove/.github/workflows/two-move-ci.yml
+++ b/TwoMove/.github/workflows/two-move-ci.yml
@@ -2,13 +2,18 @@ name: TwoMove General Pipeline
 
 on:
   push:
-    branches: [ "pruebas", "main" ]
+    branches: 
+      - main
+      - pruebas
   pull_request:
-    branches: [ "pruebas", "main" ]
+    branches: 
+      - main
+      - pruebas
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
