Install pymysql before executing tests
Added pymysql installation step before running tests.

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           python manage.py makemigrations --check --dry-run
           python manage.py migrate --noinput
+          pip install pymysql
 
       - name: Ejecutar tests
         run: |
