--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,64 @@
-# Framework principal
-Django
+# ==============================
+#  CORE FRAMEWORK
+# ==============================
+Django==5.2.7
+djangorestframework==3.15.2
+django-cors-headers==4.4.0
+python-decouple==3.8
 
-# API REST
-djangorestframework
-django-cors-headers
+# ==============================
+#  PAGOS Y STRIPE
+# ==============================
+stripe==11.5.0
 
-# Testing
-pytest
-pytest-django
+# ==============================
+#  REPORTES Y PDF
+# ==============================
+reportlab==4.2.5
 
-# Linter / Formato de código
-flake8
-black
+# ==============================
+#  UTILIDADES DE PLANTILLAS Y CORREO
+# ==============================
+pytz==2025.1
+jinja2==3.1.4
+email-validator==2.2.0
 
-# Base de datos (opcional, por si migramos a Postgres en producción)
-psycopg2-binary
+# ==============================
+#  PRUEBAS Y QA
+# ==============================
+pytest==8.3.3
+pytest-django==4.9.0
+coverage==7.6.2
 
-# Seguridad y configuración
-python-decouple
-djangorestframework-simplejwt
+# ==============================
+#  BASE DE DATOS (OPCIONAL)
+# ==============================
+mysqlclient==2.2.4
 
-# trigger pipeline test
 
-#HOLAAA2
+# ==============================
+#  SEGURIDAD Y REQUESTS
+# ==============================
+requests==2.32.3
+urllib3==2.2.3
+certifi==2024.8.30
+idna==3.10
+charset-normalizer==3.4.0
+
+# =============================
+#  MANEJO DE DATOS Y CSV
+# ==============================
+pandas==2.2.3
+openpyxl==3.1.5
+
+# ==============================
+#  DEPLOY Y GITHUB ACTIONS
+# ==============================
+gunicorn==23.0.0
+whitenoise==6.7.0
+
+# ==============================
+#  DESARROLLO (OPCIONAL)
+# ==============================
+black==24.10.0
+isort==5.13.2
